<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">

                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/add_items"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_11ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    style="@style/additemDialogEditTexts"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:hint="@string/enter_name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etVolume"
                    style="@style/dimensionDialogEditTexts"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/enter_volume" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etLength"
                    style="@style/dimensionDialogEditTexts"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:hint="@string/enter_length" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etWidth"
                    style="@style/dimensionDialogEditTexts"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/enter_width" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etHeight"
                    style="@style/dimensionDialogEditTexts"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/enter_height" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCancel"
                        style="@style/black_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_8ssp"
                        app:backgroundTint="@color/colorPrimary"
                        app:cornerRadius="@dimen/_100sdp" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnOk"
                        style="@style/black_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_weight="1"
                        android:text="@string/done"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_8ssp"
                        app:backgroundTint="@color/colorPrimary"
                        app:cornerRadius="@dimen/_100sdp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</layout>