<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.dialogs.FilterDialog">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardUseCompatPadding="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_v_ic_close_circle_outline" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtEnquiryNoSmallestToLargest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/enquiryNoSmallest"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtEnquiryNoLargestToSmallest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/enquiryNoLargest"
                android:textSize="@dimen/_11ssp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/firstName"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMoveManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/moveManager"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSurveyDateOldest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/surveyDateOldest"
                android:textSize="@dimen/_11ssp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSurveyDateNewest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/surveyDateNewest"
                android:textSize="@dimen/_11ssp" />





        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

</layout>